# changjiang

./: CMakeLists.txt  Makefile.am  configure.ac  monitor.sh  monitorTbox  start_tbox
inc/: AES_acp.h  AdcVoltageCheck.h  BluetoothControl.h  Crc32Count.h  DataCall.h  DnsResolv.h  FAWACP.h  FAWACP_Data.h  FTPClient.h  FTPSClient.h  FactoryPattern_Communication.h  GBT32960.h  GpioWake.h  HMAC_MD5.h  HmacSHA-1.h  IVI_Communication.h  LTEModuleAtCtrl.h  LedControl.h  Message.h  NASControl.h  NetworkConnection.h  OTAUpgrade.h  OTAWiFi.h  SQLiteDatabase.h  SelfCheck.h  SystemTime.h  TBoxDataPool.h  VehicleData.h  VoiceCall.h  WDSControl.h  WiFiControl.h  common.h  libnts_crypt_parse.h  mcuUart.h  nts_crypt.h
src/: AES_acp.cpp  AdcVoltageCheck.cpp  BluetoothControl.cpp  Crc32Count.cpp  DataCall.cpp  DnsResolv.cpp  FAWACP.cpp  FTPClient.cpp  FTPSClient.cpp  FactoryPattern_Communication.cpp  GBT32960.cpp  GpioWake.cpp  HMAC_MD5.cpp  HmacSHA-1.cpp  IVI_Communication.cpp  LTEModuleAtCtrl.cpp  LedControl.cpp  Message.cpp  NASControl.cpp  NetworkConnection.cpp  OTAUpgrade.cpp  OTAWiFi.cpp  SQLiteDatabase.cpp  SelfCheck.cpp  SystemTime.cpp  TBoxDataPool.cpp  VoiceCall.cpp  WDSControl.cpp  WiFiControl.cpp  common.cpp  libnts_crypt_parse.cpp  main.cpp  mcuUart.cpp  monitorTbox.c  monitorTbox_backup.c  uart_debug.cpp
src/cryptoauthlib/: atca_cfgs.c  atca_status.h  encryption_init.c  encryption_init.h
src/cryptoauthlib/basic/: atca_helpers.c  atca_helpers.h
src/cryptoauthlib/hal/: hal_at90usb1287_i2c_asf.c  hal_i2c_bitbang.c  hal_linux_i2c_userspace.c  hal_linux_kit_cdc.c  hal_pic32mz2048efm_i2c.c  hal_pic32mz2048efm_timer.c  hal_sam4s_i2c_asf.c  hal_samb11_i2c_asf.c  hal_samd21_i2c_asf.c  hal_samd21_i2c_start.c  hal_samg55_i2c_asf.c  hal_samv71_i2c_asf.c  hal_swi_uart.c  hal_win_kit_cdc.c  hal_win_kit_hid.c  hal_xmega_a3bu_i2c_asf.c  i2c_bitbang_samd21.c  kit_protocol.h  swi_bitbang_samd21.c  swi_uart_samd21_start.c  swi_uart_samd21_start.h
src/cryptoauthlib/jwt/: atca_jwt.c
