cmake_minimum_required(VERSION 3.15)
project(changjiang)

set(CMAKE_CXX_STANDARD 14)

include_directories(inc)
include_directories(src/cryptoauthlib)
include_directories(src/cryptoauthlib/atcacert)
include_directories(src/cryptoauthlib/basic)
include_directories(src/cryptoauthlib/crypto)
include_directories(src/cryptoauthlib/crypto/hashes)
include_directories(src/cryptoauthlib/hal)
include_directories(src/cryptoauthlib/host)
include_directories(src/cryptoauthlib/jwt)

add_executable(changjiang
        inc/AdcVoltageCheck.h
        inc/AES_acp.h
        inc/BluetoothControl.h
        inc/common.h
        inc/Crc32Count.h
        inc/DataCall.h
        inc/DnsResolv.h
        inc/FactoryPattern_Communication.h
        inc/FAWACP.h
        inc/FAWACP_Data.h
        inc/FTPClient.h
        inc/FTPSClient.h
        inc/GBT32960.h
        inc/GpioWake.h
        inc/HMAC_MD5.h
        inc/HmacSHA-1.h
        inc/IVI_Communication.h
        inc/LedControl.h
        inc/libnts_crypt_parse.h
        inc/LTEModuleAtCtrl.h
        inc/mcuUart.h
        inc/Message.h
        inc/NASControl.h
        inc/NetworkConnection.h
        inc/nts_crypt.h
        inc/OTAUpgrade.h
        inc/OTAWiFi.h
        inc/SelfCheck.h
        inc/SQLiteDatabase.h
        inc/SystemTime.h
        inc/TBoxDataPool.h
        inc/VehicleData.h
        inc/VoiceCall.h
        inc/WDSControl.h
        inc/WiFiControl.h
        src/cryptoauthlib/atcacert/atcacert.h
        src/cryptoauthlib/atcacert/atcacert_client.c
        src/cryptoauthlib/atcacert/atcacert_client.h
        src/cryptoauthlib/atcacert/atcacert_date.c
        src/cryptoauthlib/atcacert/atcacert_date.h
        src/cryptoauthlib/atcacert/atcacert_def.c
        src/cryptoauthlib/atcacert/atcacert_def.h
        src/cryptoauthlib/atcacert/atcacert_der.c
        src/cryptoauthlib/atcacert/atcacert_der.h
        src/cryptoauthlib/atcacert/atcacert_host_hw.c
        src/cryptoauthlib/atcacert/atcacert_host_hw.h
        src/cryptoauthlib/atcacert/atcacert_host_sw.c
        src/cryptoauthlib/atcacert/atcacert_host_sw.h
        src/cryptoauthlib/basic/atca_basic.c
        src/cryptoauthlib/basic/atca_basic.h
        src/cryptoauthlib/basic/atca_basic_aes.c
        src/cryptoauthlib/basic/atca_basic_checkmac.c
        src/cryptoauthlib/basic/atca_basic_counter.c
        src/cryptoauthlib/basic/atca_basic_derivekey.c
        src/cryptoauthlib/basic/atca_basic_ecdh.c
        src/cryptoauthlib/basic/atca_basic_gendig.c
        src/cryptoauthlib/basic/atca_basic_genkey.c
        src/cryptoauthlib/basic/atca_basic_hmac.c
        src/cryptoauthlib/basic/atca_basic_info.c
        src/cryptoauthlib/basic/atca_basic_kdf.c
        src/cryptoauthlib/basic/atca_basic_lock.c
        src/cryptoauthlib/basic/atca_basic_mac.c
        src/cryptoauthlib/basic/atca_basic_nonce.c
        src/cryptoauthlib/basic/atca_basic_privwrite.c
        src/cryptoauthlib/basic/atca_basic_random.c
        src/cryptoauthlib/basic/atca_basic_read.c
        src/cryptoauthlib/basic/atca_basic_secureboot.c
        src/cryptoauthlib/basic/atca_basic_selftest.c
        src/cryptoauthlib/basic/atca_basic_sha.c
        src/cryptoauthlib/basic/atca_basic_sign.c
        src/cryptoauthlib/basic/atca_basic_updateextra.c
        src/cryptoauthlib/basic/atca_basic_verify.c
        src/cryptoauthlib/basic/atca_basic_write.c
        src/cryptoauthlib/basic/atca_helpers.c
        src/cryptoauthlib/basic/atca_helpers.h
        src/cryptoauthlib/crypto/hashes/sha1_routines.c
        src/cryptoauthlib/crypto/hashes/sha1_routines.h
        src/cryptoauthlib/crypto/hashes/sha2_routines.c
        src/cryptoauthlib/crypto/hashes/sha2_routines.h
        src/cryptoauthlib/crypto/atca_crypto_sw.h
        src/cryptoauthlib/crypto/atca_crypto_sw_ecdsa.c
        src/cryptoauthlib/crypto/atca_crypto_sw_ecdsa.h
        src/cryptoauthlib/crypto/atca_crypto_sw_rand.c
        src/cryptoauthlib/crypto/atca_crypto_sw_rand.h
        src/cryptoauthlib/crypto/atca_crypto_sw_sha1.c
        src/cryptoauthlib/crypto/atca_crypto_sw_sha1.h
        src/cryptoauthlib/crypto/atca_crypto_sw_sha2.c
        src/cryptoauthlib/crypto/atca_crypto_sw_sha2.h
        src/cryptoauthlib/hal/atca_hal.c
        src/cryptoauthlib/hal/atca_hal.h
        src/cryptoauthlib/hal/atca_start_config.h
        src/cryptoauthlib/hal/atca_start_iface.h
        src/cryptoauthlib/hal/hal_at90usb1287_i2c_asf.c
        src/cryptoauthlib/hal/hal_at90usb1287_i2c_asf.h
        src/cryptoauthlib/hal/hal_at90usb1287_timer_asf.c
        src/cryptoauthlib/hal/hal_i2c_bitbang.c
        src/cryptoauthlib/hal/hal_i2c_bitbang.h
        src/cryptoauthlib/hal/hal_linux_i2c_userspace.c
        src/cryptoauthlib/hal/hal_linux_i2c_userspace.h
        src/cryptoauthlib/hal/hal_linux_kit_cdc.c
        src/cryptoauthlib/hal/hal_linux_kit_cdc.h
        src/cryptoauthlib/hal/hal_linux_kit_hid.c
        src/cryptoauthlib/hal/hal_linux_kit_hid.h
        src/cryptoauthlib/hal/hal_linux_timer.c
        src/cryptoauthlib/hal/hal_pic32mx695f512h_i2c.c
        src/cryptoauthlib/hal/hal_pic32mx695f512h_i2c.h
        src/cryptoauthlib/hal/hal_pic32mx695f512h_timer.c
        src/cryptoauthlib/hal/hal_pic32mz2048efm_i2c.c
        src/cryptoauthlib/hal/hal_pic32mz2048efm_i2c.h
        src/cryptoauthlib/hal/hal_pic32mz2048efm_timer.c
        src/cryptoauthlib/hal/hal_sam4s_i2c_asf.c
        src/cryptoauthlib/hal/hal_sam4s_i2c_asf.h
        src/cryptoauthlib/hal/hal_sam4s_timer_asf.c
        src/cryptoauthlib/hal/hal_samb11_i2c_asf.c
        src/cryptoauthlib/hal/hal_samb11_i2c_asf.h
        src/cryptoauthlib/hal/hal_samb11_timer_asf.c
        src/cryptoauthlib/hal/hal_samd21_i2c_asf.c
        src/cryptoauthlib/hal/hal_samd21_i2c_asf.h
        src/cryptoauthlib/hal/hal_samd21_i2c_start.c
        src/cryptoauthlib/hal/hal_samd21_i2c_start.h
        src/cryptoauthlib/hal/hal_samd21_timer_asf.c
        src/cryptoauthlib/hal/hal_samd21_timer_start.c
        src/cryptoauthlib/hal/hal_samg55_i2c_asf.c
        src/cryptoauthlib/hal/hal_samg55_i2c_asf.h
        src/cryptoauthlib/hal/hal_samg55_timer_asf.c
        src/cryptoauthlib/hal/hal_samv71_i2c_asf.c
        src/cryptoauthlib/hal/hal_samv71_i2c_asf.h
        src/cryptoauthlib/hal/hal_samv71_timer_asf.c
        src/cryptoauthlib/hal/hal_swi_bitbang.c
        src/cryptoauthlib/hal/hal_swi_bitbang.h
        src/cryptoauthlib/hal/hal_swi_uart.c
        src/cryptoauthlib/hal/hal_swi_uart.h
        src/cryptoauthlib/hal/hal_win_kit_cdc.c
        src/cryptoauthlib/hal/hal_win_kit_cdc.h
        src/cryptoauthlib/hal/hal_win_kit_hid.c
        src/cryptoauthlib/hal/hal_win_kit_hid.h
        src/cryptoauthlib/hal/hal_win_timer.c
        src/cryptoauthlib/hal/hal_xmega_a3bu_i2c_asf.c
        src/cryptoauthlib/hal/hal_xmega_a3bu_i2c_asf.h
        src/cryptoauthlib/hal/hal_xmega_a3bu_timer_asf.c
        src/cryptoauthlib/hal/i2c_bitbang_samd21.c
        src/cryptoauthlib/hal/i2c_bitbang_samd21.h
        src/cryptoauthlib/hal/kit_phy.h
        src/cryptoauthlib/hal/kit_protocol.c
        src/cryptoauthlib/hal/kit_protocol.h
        src/cryptoauthlib/hal/swi_bitbang_samd21.c
        src/cryptoauthlib/hal/swi_bitbang_samd21.h
        src/cryptoauthlib/hal/swi_uart_at90usb1287_asf.c
        src/cryptoauthlib/hal/swi_uart_at90usb1287_asf.h
        src/cryptoauthlib/hal/swi_uart_samd21_asf.c
        src/cryptoauthlib/hal/swi_uart_samd21_asf.h
        src/cryptoauthlib/hal/swi_uart_samd21_start.c
        src/cryptoauthlib/hal/swi_uart_samd21_start.h
        src/cryptoauthlib/hal/swi_uart_xmega_a3bu_asf.c
        src/cryptoauthlib/hal/swi_uart_xmega_a3bu_asf.h
        src/cryptoauthlib/host/atca_host.c
        src/cryptoauthlib/host/atca_host.h
        src/cryptoauthlib/jwt/atca_jwt.c
        src/cryptoauthlib/jwt/atca_jwt.h
        src/cryptoauthlib/atca_bool.h
        src/cryptoauthlib/atca_cfgs.c
        src/cryptoauthlib/atca_cfgs.h
        src/cryptoauthlib/atca_command.c
        src/cryptoauthlib/atca_command.h
        src/cryptoauthlib/atca_compiler.h
        src/cryptoauthlib/atca_device.c
        src/cryptoauthlib/atca_device.h
        src/cryptoauthlib/atca_devtypes.h
        src/cryptoauthlib/atca_execution.c
        src/cryptoauthlib/atca_execution.h
        src/cryptoauthlib/atca_iface.c
        src/cryptoauthlib/atca_iface.h
        src/cryptoauthlib/atca_status.h
        src/cryptoauthlib/cryptoauthlib.h
        src/cryptoauthlib/encryption_init.c
        src/cryptoauthlib/encryption_init.h
        src/AdcVoltageCheck.cpp
        src/AES_acp.cpp
        src/BluetoothControl.cpp
        src/common.cpp
        src/Crc32Count.cpp
        src/DataCall.cpp
        src/DnsResolv.cpp
        src/FactoryPattern_Communication.cpp
        src/FAWACP.cpp
        src/FTPClient.cpp
        src/FTPSClient.cpp
        src/GBT32960.cpp
        src/GpioWake.cpp
        src/HMAC_MD5.cpp
        src/HmacSHA-1.cpp
        src/IVI_Communication.cpp
        src/LedControl.cpp
        src/libnts_crypt_parse.cpp
        src/LTEModuleAtCtrl.cpp
        src/main.cpp
        src/mcuUart.cpp
        src/Message.cpp
        src/monitorTbox.c
        src/monitorTbox_backup.c
        src/NASControl.cpp
        src/NetworkConnection.cpp
        src/OTAUpgrade.cpp
        src/OTAWiFi.cpp
        src/SelfCheck.cpp
        src/SQLiteDatabase.cpp
        src/SystemTime.cpp
        src/TBoxDataPool.cpp
        src/uart_debug.cpp
        src/VoiceCall.cpp
        src/WDSControl.cpp
        src/WiFiControl.cpp)
